--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,8 +16,9 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
 
     steps:
     - uses: actions/checkout@v3
@@ -27,12 +28,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v1
+    - run: npm run build --if-present
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        # Upload dist directory
-        path: './dist/'
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
+
